--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -137,7 +137,7 @@
                 <property name="frameShadow">
                  <enum>QFrame::Raised</enum>
                 </property>
-                <layout class="QVBoxLayout" name="verticalLayout_5" stretch="0,1">
+                <layout class="QVBoxLayout" name="verticalLayout_5" stretch="0,0">
                  <item>
                   <layout class="QHBoxLayout" name="horizontalLayout_22" stretch="0,0,0">
                    <property name="leftMargin">
@@ -244,7 +244,7 @@
                     <property name="geometry">
                      <rect>
                       <x>0</x>
-                      <y>0</y>
+                      <y>-1004</y>
                       <width>620</width>
                       <height>1479</height>
                      </rect>
@@ -324,7 +324,7 @@
                           </font>
                          </property>
                          <property name="text">
-                          <string>v</string>
+                          <string>⮟</string>
                          </property>
                         </widget>
                        </item>
@@ -349,6 +349,9 @@
                        </property>
                        <item>
                         <widget class="QLabel" name="label_24">
+                         <property name="enabled">
+                          <bool>true</bool>
+                         </property>
                          <property name="minimumSize">
                           <size>
                            <width>150</width>
@@ -538,7 +541,7 @@
                                </property>
                                <property name="font">
                                 <font>
-                                 <family>Bahnschrift SemiBold</family>
+                                 <family>Bahnschrift</family>
                                  <pointsize>14</pointsize>
                                 </font>
                                </property>
@@ -893,7 +896,7 @@
                           </font>
                          </property>
                          <property name="text">
-                          <string>v</string>
+                          <string>⮟</string>
                          </property>
                         </widget>
                        </item>
@@ -1321,7 +1324,7 @@
                           </font>
                          </property>
                          <property name="text">
-                          <string>v</string>
+                          <string>⮟</string>
                          </property>
                         </widget>
                        </item>
@@ -2252,10 +2255,12 @@
                           <font>
                            <family>Bahnschrift SemiBold</family>
                            <pointsize>16</pointsize>
+                           <weight>50</weight>
+                           <bold>false</bold>
                           </font>
                          </property>
                          <property name="text">
-                          <string>v</string>
+                          <string>⮟</string>
                          </property>
                         </widget>
                        </item>
@@ -3187,7 +3192,7 @@
                   </font>
                  </property>
                  <property name="toolTip">
-                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;Spectral Math currently located in the Spectral Math tab of the Machine Configuration window.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Spectral Math&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Set how reference scans operate on other scans.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;Software settings available in the menubar at this time.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Settings&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Adjust software settings.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="text">
                   <string>⚙</string>
@@ -3222,7 +3227,7 @@
                   </font>
                  </property>
                  <property name="toolTip">
-                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;Spectral Math currently located in the Spectral Math tab of the Machine Configuration window.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Spectral Math&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Set how reference scans operate on other scans.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Spectral Math&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Set how reference scans operate on other scans.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="text">
                   <string>∑</string>
