--- a/ui/spectral_ops.ui
+++ b/ui/spectral_ops.ui
@@ -182,7 +182,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="accept">
+        <widget class="QPushButton" name="sops_accept">
          <property name="text">
           <string>Accept</string>
          </property>
