--- a/ui/device_manager.ui
+++ b/ui/device_manager.ui
@@ -278,8 +278,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>883</width>
-           <height>110</height>
+           <width>891</width>
+           <height>138</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -513,8 +513,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>883</width>
-           <height>110</height>
+           <width>891</width>
+           <height>137</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -605,6 +605,13 @@
      <property name="bottomMargin">
       <number>5</number>
      </property>
+     <item>
+      <widget class="QLabel" name="load_spinner">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QLabel" name="current_loading_status">
        <property name="font">
